default/objects/Map_Member_Placeholder_Relationship__c/Map_Member_Placeholder_Relationship__c.object-meta.xml
<CustomObject>
    <label>Map Member Placeholder Relationship</label>
    <nameField>
        <label>Map Member Placeholder Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Map Member Placeholder Relationships</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>