default/objects/Map_Member_Placeholder_Relationship__c/fields/Is_Hierarchy__c.field-meta.xml
<CustomField>
    <fullName>Is_Hierarchy__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If this is true, then the relationship line is a hierarchy line that identifies that node A reports to node B</description>
    <label>Is_Hierarchy</label>
    <type>Checkbox</type>
</CustomField>